[gd_scene load_steps=13 format=2]

[ext_resource path="res://content/gadgets/prospectionMeter/ResourceMeter.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/prospectionMeter/CompassNeedle.gd" type="Script" id=2]
[ext_resource path="res://content/gadgets/prospectionMeter/background.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/prospectionMeter/zeiger_wasser.png" type="Texture" id=4]
[ext_resource path="res://content/gadgets/prospectionMeter/zeiger_sand.png" type="Texture" id=5]
[ext_resource path="res://content/gadgets/prospectionMeter/zeiger_eisen.png" type="Texture" id=6]
[ext_resource path="res://content/gadgets/prospectionMeter/front.png" type="Texture" id=7]
[ext_resource path="res://content/icons/icon_water.png" type="Texture" id=8]
[ext_resource path="res://content/icons/icon_iron.png" type="Texture" id=9]
[ext_resource path="res://content/icons/icon_sand.png" type="Texture" id=10]
[ext_resource path="res://content/gadgets/prospectionMeter/compassBackground.png" type="Texture" id=11]
[ext_resource path="res://content/gadgets/prospectionMeter/ProspectionMeter.gd" type="Script" id=12]

[node name="ProspectionMeterHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 12 )
size = Vector2( 4, 2 )
layoutWeights = Vector2( 1, 5 )
layoutPriority = 20

[node name="Iron1" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 3.0
margin_right = 23.0
margin_bottom = 7.0
texture = ExtResource( 3 )

[node name="TextureRect1" type="TextureRect" parent="Iron1"]
margin_left = -8.0
margin_top = -1.24878
margin_right = 16.0
margin_bottom = 22.7512
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="IronMeter" type="ColorRect" parent="Iron1"]
margin_right = 13.0
margin_bottom = 4.0
color = Color( 1, 0.666667, 0.368627, 1 )
script = ExtResource( 1 )

[node name="Foreground" type="TextureRect" parent="Iron1"]
margin_left = 0.25
margin_right = 13.25
margin_bottom = 4.0
texture = ExtResource( 7 )

[node name="Water1" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 23.0
margin_bottom = 14.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Water1"]
margin_left = -7.75
margin_top = -0.748802
margin_right = 16.25
margin_bottom = 23.2512
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="WaterMeter" type="ColorRect" parent="Water1"]
margin_right = 13.0
margin_bottom = 4.0
color = Color( 1, 0.666667, 0.368627, 1 )
script = ExtResource( 1 )

[node name="Foreground" type="TextureRect" parent="Water1"]
margin_right = 13.0
margin_bottom = 4.0
texture = ExtResource( 7 )

[node name="Sand1" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 17.0
margin_right = 23.0
margin_bottom = 21.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="Sand1"]
margin_left = -8.0
margin_top = -1.4988
margin_right = 16.0
margin_bottom = 22.5012
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )

[node name="SandMeter" type="ColorRect" parent="Sand1"]
margin_right = 13.0
margin_bottom = 4.0
color = Color( 1, 0.666667, 0.368627, 1 )
script = ExtResource( 1 )

[node name="Foreground" type="TextureRect" parent="Sand1"]
margin_left = 0.25
margin_right = 13.25
margin_bottom = 4.0
texture = ExtResource( 7 )

[node name="Compass" type="TextureRect" parent="."]
margin_left = 26.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 22.0
texture = ExtResource( 11 )

[node name="NeedleSand" type="TextureRect" parent="Compass"]
margin_left = -3.0
margin_top = -2.0
margin_right = 21.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 11, 13 )
texture = ExtResource( 6 )
script = ExtResource( 2 )

[node name="NeedleIron" type="TextureRect" parent="Compass"]
margin_left = -3.0
margin_top = -2.0
margin_right = 21.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 11, 13 )
texture = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NeedleWater" type="TextureRect" parent="Compass"]
margin_left = -3.0
margin_top = -2.0
margin_right = 21.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 11, 13 )
texture = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
